# rust-ffi-demo

./: Cargo.toml  build.rs  hello.c  test.py
src/: lib.rs
